--- a/.circleci/config-2_1.yml
+++ b/.circleci/config-2_1.yml
@@ -186,18 +186,24 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 8 unit tests
     - start_j8_unit_tests:
         type: approval
+        requires:
+          - start_j8_build
     - j8_unit_tests:
         requires:
           - start_j8_unit_tests
           - j8_build
     - start_j8_jvm_dtests:
         type: approval
+        requires:
+          - start_j8_build
     - j8_jvm_dtests:
         requires:
           - start_j8_jvm_dtests
           - j8_build
     - start_j8_cqlshlib_tests:
         type: approval
+        requires:
+          - start_j8_build
     - j8_cqlshlib_tests:
         requires:
           - start_j8_cqlshlib_tests
@@ -205,6 +211,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 11 unit tests
     - start_j11_unit_tests:
         type: approval
+        requires:
+          - start_j8_build
     - j11_unit_tests:
         requires:
           - start_j11_unit_tests
@@ -212,42 +220,56 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # specialized unit tests (all run on request using Java 8)
     - start_utests_long:
         type: approval
+        requires:
+          - start_j8_build
     - utests_long:
         requires:
           - start_utests_long
           - j8_build
     - start_utests_compression:
         type: approval
+        requires:
+          - start_j8_build
     - utests_compression:
         requires:
           - start_utests_compression
           - j8_build
     - start_utests_stress:
         type: approval
+        requires:
+          - start_j8_build
     - utests_stress:
         requires:
           - start_utests_stress
           - j8_build
     - start_utests_fqltool:
         type: approval
+        requires:
+          - start_j8_build
     - utests_fqltool:
         requires:
           - start_utests_fqltool
           - j8_build
     - start_utests_system_keyspace_directory:
         type: approval
+        requires:
+          - start_j8_build
     - utests_system_keyspace_directory:
         requires:
           - start_utests_system_keyspace_directory
           - j8_build
     - start_j8_dtest_jars_build:
         type: approval
+        requires:
+          - start_j8_build
     - j8_dtest_jars_build:
         requires:
           - j8_build
           - start_j8_dtest_jars_build
     - start_jvm_upgrade_dtest:
         type: approval
+        requires:
+          - start_j8_build
     - j8_jvm_upgrade_dtests:
         requires:
           - start_jvm_upgrade_dtest
@@ -255,6 +277,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 8 dtests
     - start_j8_dtests:
         type: approval
+        requires:
+          - start_j8_build
     - j8_dtests-with-vnodes:
         requires:
           - start_j8_dtests
@@ -266,6 +290,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 11 dtests
     - start_j11_dtests:
         type: approval
+        requires:
+          - start_j8_build
     - j11_dtests-with-vnodes:
         requires:
         - start_j11_dtests
@@ -277,6 +303,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 8 upgrade tests
     - start_upgrade_tests:
         type: approval
+        requires:
+          - start_j8_build
     - j8_upgradetests-no-vnodes:
         requires:
           - start_upgrade_tests
@@ -284,6 +312,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 8 cqlsh dtests
     - start_j8_cqlsh_tests:
         type: approval
+        requires:
+          - start_j8_build
     - j8_cqlsh-dtests-py2-with-vnodes:
         requires:
         - start_j8_cqlsh_tests
@@ -311,6 +341,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 11 cqlsh dtests
     - start_j11_cqlsh_tests:
         type: approval
+        requires:
+          - start_j8_build
     - j11_cqlsh-dtests-py2-with-vnodes:
         requires:
         - start_j11_cqlsh_tests
@@ -338,6 +370,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 8 repeated utest
     - start_j8_repeated_utest:
         type: approval
+        requires:
+          - start_j8_build
     - j8_repeated_utest:
         requires:
           - start_j8_repeated_utest
@@ -345,6 +379,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 11 repeated utest
     - start_j11_repeated_utest:
         type: approval
+        requires:
+          - start_j8_build
     - j11_repeated_utest:
         requires:
           - start_j11_repeated_utest
@@ -352,6 +388,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 8 repeated dtest
     - start_j8_repeated_dtest:
         type: approval
+        requires:
+          - start_j8_build
     - j8_repeated_dtest:
         requires:
           - start_j8_repeated_dtest
@@ -359,6 +397,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Java 11 repeated dtest
     - start_j11_repeated_dtest:
         type: approval
+        requires:
+          - start_j8_build
     - j11_repeated_dtest:
         requires:
           - start_j11_repeated_dtest
@@ -366,6 +406,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Repeated Python upgrade dtest
     - start_repeated_upgrade_dtest:
         type: approval
+        requires:
+          - start_j8_build
     - repeated_upgrade_dtest:
         requires:
             - start_repeated_upgrade_dtest
@@ -373,6 +415,8 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
     # Repeated JVM upgrade dtest
     - start_repeated_jvm_upgrade_dtest:
         type: approval
+        requires:
+          - start_j8_build
     - repeated_jvm_upgrade_dtest:
         requires:
           - start_repeated_jvm_upgrade_dtest
@@ -554,18 +598,24 @@ j11_with_dtests_jobs: &j11_with_dtests_jobs
     # Java 11 unit tests
     - start_j11_unit_tests:
         type: approval
+        requires:
+          - start_j11_build
     - j11_unit_tests:
         requires:
           - start_j11_unit_tests
           - j11_build
     - start_j11_jvm_dtests:
         type: approval
+        requires:
+          - start_j11_build
     - j11_jvm_dtests:
         requires:
           - start_j11_jvm_dtests
           - j11_build
     - start_j11_cqlshlib_tests:
         type: approval
+        requires:
+          - start_j11_build
     - j11_cqlshlib_tests:
         requires:
           - start_j11_cqlshlib_tests
@@ -573,6 +623,8 @@ j11_with_dtests_jobs: &j11_with_dtests_jobs
     # Java 11 dtests
     - start_j11_dtests:
         type: approval
+        requires:
+          - start_j11_build
     - j11_dtests-with-vnodes:
         requires:
           - start_j11_dtests
@@ -583,6 +635,8 @@ j11_with_dtests_jobs: &j11_with_dtests_jobs
           - j11_build
     - start_j11_cqlsh_tests:
         type: approval
+        requires:
+          - start_j11_build
     - j11_cqlsh-dtests-py2-with-vnodes:
         requires:
           - start_j11_cqlsh_tests
@@ -610,6 +664,8 @@ j11_with_dtests_jobs: &j11_with_dtests_jobs
     # Java 11 repeated utest
     - start_j11_repeated_utest:
         type: approval
+        requires:
+          - start_j11_build
     - j11_repeated_utest:
         requires:
           - start_j11_repeated_utest
@@ -617,6 +673,8 @@ j11_with_dtests_jobs: &j11_with_dtests_jobs
     # Java 11 repeated dtest
     - start_j11_repeated_dtest:
         type: approval
+        requires:
+          - start_j11_build
     - j11_repeated_dtest:
         requires:
           - start_j11_repeated_dtest
