--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3871,72 +3871,96 @@ workflows:
         - start_j8_build
     - start_j8_unit_tests:
         type: approval
+        requires:
+        - start_j8_build
     - j8_unit_tests:
         requires:
         - start_j8_unit_tests
         - j8_build
     - start_j8_jvm_dtests:
         type: approval
+        requires:
+        - start_j8_build
     - j8_jvm_dtests:
         requires:
         - start_j8_jvm_dtests
         - j8_build
     - start_j8_cqlshlib_tests:
         type: approval
+        requires:
+        - start_j8_build
     - j8_cqlshlib_tests:
         requires:
         - start_j8_cqlshlib_tests
         - j8_build
     - start_j11_unit_tests:
         type: approval
+        requires:
+        - start_j8_build
     - j11_unit_tests:
         requires:
         - start_j11_unit_tests
         - j8_build
     - start_utests_long:
         type: approval
+        requires:
+        - start_j8_build
     - utests_long:
         requires:
         - start_utests_long
         - j8_build
     - start_utests_compression:
         type: approval
+        requires:
+        - start_j8_build
     - utests_compression:
         requires:
         - start_utests_compression
         - j8_build
     - start_utests_stress:
         type: approval
+        requires:
+        - start_j8_build
     - utests_stress:
         requires:
         - start_utests_stress
         - j8_build
     - start_utests_fqltool:
         type: approval
+        requires:
+        - start_j8_build
     - utests_fqltool:
         requires:
         - start_utests_fqltool
         - j8_build
     - start_utests_system_keyspace_directory:
         type: approval
+        requires:
+        - start_j8_build
     - utests_system_keyspace_directory:
         requires:
         - start_utests_system_keyspace_directory
         - j8_build
     - start_j8_dtest_jars_build:
         type: approval
+        requires:
+        - start_j8_build
     - j8_dtest_jars_build:
         requires:
         - j8_build
         - start_j8_dtest_jars_build
     - start_jvm_upgrade_dtest:
         type: approval
+        requires:
+        - start_j8_build
     - j8_jvm_upgrade_dtests:
         requires:
         - start_jvm_upgrade_dtest
         - j8_dtest_jars_build
     - start_j8_dtests:
         type: approval
+        requires:
+        - start_j8_build
     - j8_dtests-with-vnodes:
         requires:
         - start_j8_dtests
@@ -3947,6 +3971,8 @@ workflows:
         - j8_build
     - start_j11_dtests:
         type: approval
+        requires:
+        - start_j8_build
     - j11_dtests-with-vnodes:
         requires:
         - start_j11_dtests
@@ -3957,12 +3983,16 @@ workflows:
         - j8_build
     - start_upgrade_tests:
         type: approval
+        requires:
+        - start_j8_build
     - j8_upgradetests-no-vnodes:
         requires:
         - start_upgrade_tests
         - j8_build
     - start_j8_cqlsh_tests:
         type: approval
+        requires:
+        - start_j8_build
     - j8_cqlsh-dtests-py2-with-vnodes:
         requires:
         - start_j8_cqlsh_tests
@@ -3989,6 +4019,8 @@ workflows:
         - j8_build
     - start_j11_cqlsh_tests:
         type: approval
+        requires:
+        - start_j8_build
     - j11_cqlsh-dtests-py2-with-vnodes:
         requires:
         - start_j11_cqlsh_tests
@@ -4015,36 +4047,48 @@ workflows:
         - j8_build
     - start_j8_repeated_utest:
         type: approval
+        requires:
+        - start_j8_build
     - j8_repeated_utest:
         requires:
         - start_j8_repeated_utest
         - j8_build
     - start_j11_repeated_utest:
         type: approval
+        requires:
+        - start_j8_build
     - j11_repeated_utest:
         requires:
         - start_j11_repeated_utest
         - j8_build
     - start_j8_repeated_dtest:
         type: approval
+        requires:
+        - start_j8_build
     - j8_repeated_dtest:
         requires:
         - start_j8_repeated_dtest
         - j8_build
     - start_j11_repeated_dtest:
         type: approval
+        requires:
+        - start_j8_build
     - j11_repeated_dtest:
         requires:
         - start_j11_repeated_dtest
         - j8_build
     - start_repeated_upgrade_dtest:
         type: approval
+        requires:
+        - start_j8_build
     - repeated_upgrade_dtest:
         requires:
         - start_repeated_upgrade_dtest
         - j8_build
     - start_repeated_jvm_upgrade_dtest:
         type: approval
+        requires:
+        - start_j8_build
     - repeated_jvm_upgrade_dtest:
         requires:
         - start_repeated_jvm_upgrade_dtest
@@ -4209,24 +4253,32 @@ workflows:
         - start_j11_build
     - start_j11_unit_tests:
         type: approval
+        requires:
+        - start_j11_build
     - j11_unit_tests:
         requires:
         - start_j11_unit_tests
         - j11_build
     - start_j11_jvm_dtests:
         type: approval
+        requires:
+        - start_j11_build
     - j11_jvm_dtests:
         requires:
         - start_j11_jvm_dtests
         - j11_build
     - start_j11_cqlshlib_tests:
         type: approval
+        requires:
+        - start_j11_build
     - j11_cqlshlib_tests:
         requires:
         - start_j11_cqlshlib_tests
         - j11_build
     - start_j11_dtests:
         type: approval
+        requires:
+        - start_j11_build
     - j11_dtests-with-vnodes:
         requires:
         - start_j11_dtests
@@ -4237,6 +4289,8 @@ workflows:
         - j11_build
     - start_j11_cqlsh_tests:
         type: approval
+        requires:
+        - start_j11_build
     - j11_cqlsh-dtests-py2-with-vnodes:
         requires:
         - start_j11_cqlsh_tests
@@ -4263,12 +4317,16 @@ workflows:
         - j11_build
     - start_j11_repeated_utest:
         type: approval
+        requires:
+        - start_j11_build
     - j11_repeated_utest:
         requires:
         - start_j11_repeated_utest
         - j11_build
     - start_j11_repeated_dtest:
         type: approval
+        requires:
+        - start_j11_build
     - j11_repeated_dtest:
         requires:
         - start_j11_repeated_dtest
