--- a/.circleci/config-2_1.yml
+++ b/.circleci/config-2_1.yml
@@ -294,12 +294,12 @@ j8_separate_jobs: &j8_separate_jobs
           - start_j8_build
     - j11_dtests-with-vnodes:
         requires:
-        - start_j11_dtests
-        - j8_build
+          - start_j11_dtests
+          - j8_build
     - j11_dtests-no-vnodes:
         requires:
-        - start_j11_dtests
-        - j8_build
+          - start_j11_dtests
+          - j8_build
     # Java 8 upgrade tests
     - start_upgrade_tests:
         type: approval
@@ -316,24 +316,24 @@ j8_separate_jobs: &j8_separate_jobs
           - start_j8_build
     - j8_cqlsh-dtests-py2-with-vnodes:
         requires:
-        - start_j8_cqlsh_tests
-        - j8_build
+          - start_j8_cqlsh_tests
+          - j8_build
     - j8_cqlsh-dtests-py3-with-vnodes:
         requires:
-        - start_j8_cqlsh_tests
-        - j8_build
+          - start_j8_cqlsh_tests
+          - j8_build
     - j8_cqlsh-dtests-py38-with-vnodes:
         requires:
-        - start_j8_cqlsh_tests
-        - j8_build
+          - start_j8_cqlsh_tests
+          - j8_build
     - j8_cqlsh-dtests-py2-no-vnodes:
         requires:
-        - start_j8_cqlsh_tests
-        - j8_build
+          - start_j8_cqlsh_tests
+          - j8_build
     - j8_cqlsh-dtests-py3-no-vnodes:
         requires:
-        - start_j8_cqlsh_tests
-        - j8_build
+          - start_j8_cqlsh_tests
+          - j8_build
     - j8_cqlsh-dtests-py38-no-vnodes:
         requires:
           - start_j8_cqlsh_tests
@@ -345,12 +345,12 @@ j8_separate_jobs: &j8_separate_jobs
           - start_j8_build
     - j11_cqlsh-dtests-py2-with-vnodes:
         requires:
-        - start_j11_cqlsh_tests
-        - j8_build
+          - start_j11_cqlsh_tests
+          - j8_build
     - j11_cqlsh-dtests-py3-with-vnodes:
         requires:
-        - start_j11_cqlsh_tests
-        - j8_build
+          - start_j11_cqlsh_tests
+          - j8_build
     - j11_cqlsh-dtests-py38-with-vnodes:
         requires:
           - start_j11_cqlsh_tests
@@ -410,13 +410,211 @@ j8_separate_jobs: &j8_separate_jobs
           - start_j8_build
     - repeated_upgrade_dtest:
         requires:
-            - start_repeated_upgrade_dtest
-            - j8_build
+          - start_repeated_upgrade_dtest
+          - j8_build
     # Repeated JVM upgrade dtest
     - start_repeated_jvm_upgrade_dtest:
         type: approval
         requires:
           - start_j8_build
+    - repeated_jvm_upgrade_dtest:
+        requires:
+          - start_repeated_jvm_upgrade_dtest
+          - j8_dtest_jars_build
+
+j8_separate_jobs_auto: &j8_separate_jobs_auto
+  jobs:
+    - j8_build
+    # Java 8 unit tests
+    - start_j8_unit_tests:
+        type: approval
+    - j8_unit_tests:
+        requires:
+          - start_j8_unit_tests
+          - j8_build
+    - start_j8_jvm_dtests:
+        type: approval
+    - j8_jvm_dtests:
+        requires:
+          - start_j8_jvm_dtests
+          - j8_build
+    - start_j8_cqlshlib_tests:
+        type: approval
+    - j8_cqlshlib_tests:
+        requires:
+          - start_j8_cqlshlib_tests
+          - j8_build
+    # Java 11 unit tests
+    - start_j11_unit_tests:
+        type: approval
+    - j11_unit_tests:
+        requires:
+          - start_j11_unit_tests
+          - j8_build
+    # specialized unit tests (all run on request using Java 8)
+    - start_utests_long:
+        type: approval
+    - utests_long:
+        requires:
+          - start_utests_long
+          - j8_build
+    - start_utests_compression:
+        type: approval
+    - utests_compression:
+        requires:
+          - start_utests_compression
+          - j8_build
+    - start_utests_stress:
+        type: approval
+    - utests_stress:
+        requires:
+          - start_utests_stress
+          - j8_build
+    - start_utests_fqltool:
+        type: approval
+    - utests_fqltool:
+        requires:
+          - start_utests_fqltool
+          - j8_build
+    - start_utests_system_keyspace_directory:
+        type: approval
+    - utests_system_keyspace_directory:
+        requires:
+          - start_utests_system_keyspace_directory
+          - j8_build
+    - start_j8_dtest_jars_build:
+        type: approval
+    - j8_dtest_jars_build:
+        requires:
+          - j8_build
+          - start_j8_dtest_jars_build
+    - start_jvm_upgrade_dtest:
+        type: approval
+    - j8_jvm_upgrade_dtests:
+        requires:
+          - start_jvm_upgrade_dtest
+          - j8_dtest_jars_build
+    # Java 8 dtests
+    - start_j8_dtests:
+        type: approval
+    - j8_dtests-with-vnodes:
+        requires:
+          - start_j8_dtests
+          - j8_build
+    - j8_dtests-no-vnodes:
+        requires:
+          - start_j8_dtests
+          - j8_build
+    # Java 11 dtests
+    - start_j11_dtests:
+        type: approval
+    - j11_dtests-with-vnodes:
+        requires:
+          - start_j11_dtests
+          - j8_build
+    - j11_dtests-no-vnodes:
+        requires:
+          - start_j11_dtests
+          - j8_build
+    # Java 8 upgrade tests
+    - start_upgrade_tests:
+        type: approval
+    - j8_upgradetests-no-vnodes:
+        requires:
+          - start_upgrade_tests
+          - j8_build
+    # Java 8 cqlsh dtests
+    - start_j8_cqlsh_tests:
+        type: approval
+    - j8_cqlsh-dtests-py2-with-vnodes:
+        requires:
+          - start_j8_cqlsh_tests
+          - j8_build
+    - j8_cqlsh-dtests-py3-with-vnodes:
+        requires:
+          - start_j8_cqlsh_tests
+          - j8_build
+    - j8_cqlsh-dtests-py38-with-vnodes:
+        requires:
+          - start_j8_cqlsh_tests
+          - j8_build
+    - j8_cqlsh-dtests-py2-no-vnodes:
+        requires:
+          - start_j8_cqlsh_tests
+          - j8_build
+    - j8_cqlsh-dtests-py3-no-vnodes:
+        requires:
+          - start_j8_cqlsh_tests
+          - j8_build
+    - j8_cqlsh-dtests-py38-no-vnodes:
+        requires:
+          - start_j8_cqlsh_tests
+          - j8_build
+    # Java 11 cqlsh dtests
+    - start_j11_cqlsh_tests:
+        type: approval
+    - j11_cqlsh-dtests-py2-with-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j8_build
+    - j11_cqlsh-dtests-py3-with-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j8_build
+    - j11_cqlsh-dtests-py38-with-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j8_build
+    - j11_cqlsh-dtests-py2-no-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j8_build
+    - j11_cqlsh-dtests-py3-no-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j8_build
+    - j11_cqlsh-dtests-py38-no-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j8_build
+    # Java 8 repeated utest
+    - start_j8_repeated_utest:
+        type: approval
+    - j8_repeated_utest:
+        requires:
+          - start_j8_repeated_utest
+          - j8_build
+    # Java 11 repeated utest
+    - start_j11_repeated_utest:
+        type: approval
+    - j11_repeated_utest:
+        requires:
+          - start_j11_repeated_utest
+          - j8_build
+    # Java 8 repeated dtest
+    - start_j8_repeated_dtest:
+        type: approval
+    - j8_repeated_dtest:
+        requires:
+          - start_j8_repeated_dtest
+          - j8_build
+    # Java 11 repeated dtest
+    - start_j11_repeated_dtest:
+        type: approval
+    - j11_repeated_dtest:
+        requires:
+          - start_j11_repeated_dtest
+          - j8_build
+    # Repeated Python upgrade dtest
+    - start_repeated_upgrade_dtest:
+        type: approval
+    - repeated_upgrade_dtest:
+        requires:
+          - start_repeated_upgrade_dtest
+          - j8_build
+    # Repeated JVM upgrade dtest
+    - start_repeated_jvm_upgrade_dtest:
+        type: approval
     - repeated_jvm_upgrade_dtest:
         requires:
           - start_repeated_jvm_upgrade_dtest
@@ -429,6 +627,168 @@ j8_pre-commit_jobs: &j8_pre-commit_jobs
     - j8_build:
         requires:
           - start_pre-commit_tests
+    # Java 8 unit tests
+    - j8_unit_tests:
+        requires:
+          - j8_build
+    - j8_jvm_dtests:
+        requires:
+          - j8_build
+    - j8_cqlshlib_tests:
+        requires:
+          - j8_build
+    # Java 11 unit tests
+    - j11_unit_tests:
+        requires:
+          - j8_build
+    # specialized unit tests (all run on request using Java 8)
+    - start_utests_long:
+        type: approval
+    - utests_long:
+        requires:
+          - start_utests_long
+          - j8_build
+    - start_utests_compression:
+        type: approval
+    - utests_compression:
+        requires:
+          - start_utests_compression
+          - j8_build
+    - start_utests_stress:
+        type: approval
+    - utests_stress:
+        requires:
+          - start_utests_stress
+          - j8_build
+    - start_utests_fqltool:
+        type: approval
+    - utests_fqltool:
+        requires:
+          - start_utests_fqltool
+          - j8_build
+    - start_utests_system_keyspace_directory:
+        type: approval
+    - utests_system_keyspace_directory:
+        requires:
+          - start_utests_system_keyspace_directory
+          - j8_build
+    - start_j8_dtest_jars_build:
+        type: approval
+    - j8_dtest_jars_build:
+        requires:
+          - j8_build
+          - start_j8_dtest_jars_build
+    - start_jvm_upgrade_dtest:
+        type: approval
+    - j8_jvm_upgrade_dtests:
+        requires:
+          - start_jvm_upgrade_dtest
+          - j8_dtest_jars_build
+    # Java 8 dtests
+    - j8_dtests-with-vnodes:
+        requires:
+          - j8_build
+    - j8_dtests-no-vnodes:
+        requires:
+          - j8_build
+    # Java 11 dtests
+    - j11_dtests-with-vnodes:
+        requires:
+          - j8_build
+    - j11_dtests-no-vnodes:
+        requires:
+          - j8_build
+    # Java 8 upgrade tests (on request)
+    - start_upgrade_tests:
+        type: approval
+    - j8_upgradetests-no-vnodes:
+        requires:
+          - j8_build
+          - start_upgrade_tests
+    # Java 8 cqlsh dtests
+    - j8_cqlsh-dtests-py2-with-vnodes:
+        requires:
+          - j8_build
+    - j8_cqlsh-dtests-py3-with-vnodes:
+        requires:
+          - j8_build
+    - j8_cqlsh-dtests-py38-with-vnodes:
+        requires:
+          - j8_build
+    - j8_cqlsh-dtests-py2-no-vnodes:
+        requires:
+          - j8_build
+    - j8_cqlsh-dtests-py3-no-vnodes:
+        requires:
+          - j8_build
+    - j8_cqlsh-dtests-py38-no-vnodes:
+        requires:
+          - j8_build
+    # Java 11 cqlsh dtests
+    - j11_cqlsh-dtests-py2-with-vnodes:
+        requires:
+          - j8_build
+    - j11_cqlsh-dtests-py3-with-vnodes:
+        requires:
+          - j8_build
+    - j11_cqlsh-dtests-py38-with-vnodes:
+        requires:
+          - j8_build
+    - j11_cqlsh-dtests-py2-no-vnodes:
+        requires:
+          - j8_build
+    - j11_cqlsh-dtests-py3-no-vnodes:
+        requires:
+          - j8_build
+    - j11_cqlsh-dtests-py38-no-vnodes:
+        requires:
+          - j8_build
+    # Java 8 repeated utest (on request)
+    - start_j8_repeated_utest:
+        type: approval
+    - j8_repeated_utest:
+        requires:
+          - start_j8_repeated_utest
+          - j8_build
+    # Java 11 repeated utest (on request)
+    - start_j11_repeated_utest:
+        type: approval
+    - j11_repeated_utest:
+        requires:
+          - start_j11_repeated_utest
+          - j8_build
+    # Java 8 repeated dtest (on request)
+    - start_j8_repeated_dtest:
+        type: approval
+    - j8_repeated_dtest:
+        requires:
+          - start_j8_repeated_dtest
+          - j8_build
+    # Java 11 repeated dtest (on request)
+    - start_j11_repeated_dtest:
+        type: approval
+    - j11_repeated_dtest:
+        requires:
+          - start_j11_repeated_dtest
+          - j8_build
+    # Repeated Python upgrade dtest (on request)
+    - start_repeated_upgrade_dtest:
+        type: approval
+    - repeated_upgrade_dtest:
+        requires:
+          - start_repeated_upgrade_dtest
+          - j8_build
+    # Repeated JVM upgrade dtest (on request)
+    - start_repeated_jvm_upgrade_dtest:
+        type: approval
+    - repeated_jvm_upgrade_dtest:
+        requires:
+          - start_repeated_jvm_upgrade_dtest
+          - j8_dtest_jars_build
+
+j8_pre-commit_jobs_auto: &j8_pre-commit_jobs_auto
+  jobs:
+    - j8_build
     # Java 8 unit tests
     - j8_unit_tests:
         requires:
@@ -680,6 +1040,80 @@ j11_separate_jobs: &j11_separate_jobs
           - start_j11_repeated_dtest
           - j11_build
 
+j11_separate_jobs_auto: &j11_separate_jobs_auto
+  jobs:
+    - j11_build
+    # Java 11 unit tests
+    - start_j11_unit_tests:
+        type: approval
+    - j11_unit_tests:
+        requires:
+          - start_j11_unit_tests
+          - j11_build
+    - start_j11_jvm_dtests:
+        type: approval
+    - j11_jvm_dtests:
+        requires:
+          - start_j11_jvm_dtests
+          - j11_build
+    - start_j11_cqlshlib_tests:
+        type: approval
+    - j11_cqlshlib_tests:
+        requires:
+          - start_j11_cqlshlib_tests
+          - j11_build
+    # Java 11 dtests
+    - start_j11_dtests:
+        type: approval
+    - j11_dtests-with-vnodes:
+        requires:
+          - start_j11_dtests
+          - j11_build
+    - j11_dtests-no-vnodes:
+        requires:
+          - start_j11_dtests
+          - j11_build
+    - start_j11_cqlsh_tests:
+        type: approval
+    - j11_cqlsh-dtests-py2-with-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j11_build
+    - j11_cqlsh-dtests-py3-with-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j11_build
+    - j11_cqlsh-dtests-py38-with-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j11_build
+    - j11_cqlsh-dtests-py2-no-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j11_build
+    - j11_cqlsh-dtests-py3-no-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j11_build
+    - j11_cqlsh-dtests-py38-no-vnodes:
+        requires:
+          - start_j11_cqlsh_tests
+          - j11_build
+    # Java 11 repeated utest
+    - start_j11_repeated_utest:
+        type: approval
+    - j11_repeated_utest:
+        requires:
+          - start_j11_repeated_utest
+          - j11_build
+    # Java 11 repeated dtest
+    - start_j11_repeated_dtest:
+        type: approval
+    - j11_repeated_dtest:
+        requires:
+          - start_j11_repeated_dtest
+          - j11_build
+
 j11_pre-commit_jobs: &j11_pre-commit_jobs
   jobs:
     - start_pre-commit_tests:
@@ -687,6 +1121,63 @@ j11_pre-commit_jobs: &j11_pre-commit_jobs
     - j11_build:
         requires:
           - start_pre-commit_tests
+    - j11_unit_tests:
+        requires:
+          - j11_build
+    - j11_jvm_dtests:
+        requires:
+          - j11_build
+    - j11_cqlshlib_tests:
+        requires:
+          - j11_build
+    - j11_jvm_dtests:
+        requires:
+          - j11_build
+    - j11_cqlshlib_tests:
+        requires:
+          - j11_build
+    - j11_dtests-with-vnodes:
+        requires:
+          - j11_build
+    - j11_dtests-no-vnodes:
+        requires:
+          - j11_build
+    - j11_cqlsh-dtests-py2-with-vnodes:
+        requires:
+          - j11_build
+    - j11_cqlsh-dtests-py3-with-vnodes:
+        requires:
+          - j11_build
+    - j11_cqlsh-dtests-py38-with-vnodes:
+        requires:
+          - j11_build
+    - j11_cqlsh-dtests-py2-no-vnodes:
+        requires:
+          - j11_build
+    - j11_cqlsh-dtests-py3-no-vnodes:
+        requires:
+          - j11_build
+    - j11_cqlsh-dtests-py38-no-vnodes:
+        requires:
+          - j11_build
+    # Java 11 repeated utest (on request)
+    - start_j11_repeated_utest:
+        type: approval
+    - j11_repeated_utest:
+        requires:
+          - start_j11_repeated_utest
+          - j11_build
+    # Java 11 repeated dtest (on request)
+    - start_j11_repeated_dtest:
+        type: approval
+    - j11_repeated_dtest:
+        requires:
+          - start_j11_repeated_dtest
+          - j11_build
+
+j11_pre-commit_jobs_auto: &j11_pre-commit_jobs_auto
+  jobs:
+    - j11_build
     - j11_unit_tests:
         requires:
           - j11_build
