--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1543,24 +1543,24 @@ enable_drop_compact_storage: false
 
 # Enables tracking warnings/aborts across all replicas for reporting back to client.
 # See: CASSANDRA-16850
-#track_warnings:
-#	# Scheduled to enable in 4.2
-#	enabled: false
-#	# When track_warnings.enabled: true, this tracks the materialized size of a query on the
-#	# coordinator. If coordinator_large_read.warn_threshold_kb is greater than 0, this will emit a warning
-#	# to clients with details on what query triggered this as well as the size of the result set; if
-#	# coordinator_large_read.abort_threshold_kb is greater than 0, this will abort the query after it
-#	# has exceeded this threshold, returning a read error to the user.
-#	coordinator_large_read:
-#		warn_threshold_kb: 0
-#		abort_threshold_kb: 0
-#	# When track_warnings.enabled: true, this tracks the size of the local read (as defined by
-#	# heap size), and will warn/abort based off these thresholds; 0 disables these checks.
-#	local_read_size:
-#		warn_threshold_kb: 0
-#		abort_threshold_kb: 0
-#	# When track_warnings.enabled: true, this tracks the expected memory size of the RowIndexEntry
-#	# and will warn/abort based off these thresholds; 0 disables these checks.
-#	row_index_size:
-#		warn_threshold_kb: 0
-#		abort_threshold_kb: 0
+# track_warnings:
+# Scheduled to enable in 4.2
+#     enabled: true
+# When track_warnings.enabled: true, this tracks the materialized size of a query on the
+# coordinator. If coordinator_large_read.warn_threshold_kb is greater than 0, this will emit a warning
+# to clients with details on what query triggered this as well as the size of the result set; if
+# coordinator_large_read.abort_threshold_kb is greater than 0, this will abort the query after it
+# has exceeded this threshold, returning a read error to the user.
+#     coordinator_read_size:
+#         warn_threshold_kb: 0
+#         abort_threshold_kb: 0
+# When track_warnings.enabled: true, this tracks the size of the local read (as defined by
+# heap size), and will warn/abort based off these thresholds; 0 disables these checks.
+#     local_read_size:
+#         warn_threshold_kb: 0
+#         abort_threshold_kb: 0
+# When track_warnings.enabled: true, this tracks the expected memory size of the RowIndexEntry
+# and will warn/abort based off these thresholds; 0 disables these checks.
+#     row_index_size:
+#         warn_threshold_kb: 0
+#         abort_threshold_kb: 0
