--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -361,7 +361,7 @@ prepared_statements_cache_size:
 # Default value is empty to make it "auto" (min(5% of Heap (in MB), 100MB)). Set to 0 to disable key cache.
 key_cache_size:
 
-# Duration in seconds after which Cassandra should
+# CassandraDuration in seconds after which Cassandra should
 # save the key cache. Caches are saved to saved_caches_directory as
 # specified in this configuration file.
 #
@@ -396,7 +396,7 @@ key_cache_save_period: 14400
 # Default value is 0, to disable row caching.
 row_cache_size: 0mb
 
-# Duration in seconds after which Cassandra should save the row cache.
+# CassandraDuration in seconds after which Cassandra should save the row cache.
 # Caches are saved to saved_caches_directory as specified in this configuration file.
 #
 # Saved caches greatly improve cold-start speeds, and is relatively cheap in
@@ -425,7 +425,7 @@ row_cache_save_period: 0
 # NOTE: if you perform counter deletes and rely on low gcgs, you should disable the counter cache.
 counter_cache_size:
 
-# Duration in seconds after which Cassandra should
+# CassandraDuration in seconds after which Cassandra should
 # save the counter cache (keys only). Caches are saved to saved_caches_directory as
 # specified in this configuration file.
 #
