--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -441,6 +441,14 @@ counter_cache_save_period: 7200
 # saved_caches_directory: /var/lib/cassandra/saved_caches
 
 # commitlog_sync may be either "periodic", "group", or "batch."
+#
+# When in batch mode, Cassandra won't ack writes until the commit log
+# has been flushed to disk.  Each incoming write will trigger the flush task.
+# commitlog_sync_batch_window is a deprecated value. Previously it had
+# almost no value, and is being removed.
+#
+# commitlog_sync_batch_window: 2ms
+# commitlog_sync may be either "periodic", "group", or "batch."
 
 #
 # group mode is similar to batch mode, where Cassandra will not ack writes
