--- a/test/conf/cassandra-murmur.yaml
+++ b/test/conf/cassandra-murmur.yaml
@@ -5,6 +5,7 @@
 cluster_name: Test Cluster
 memtable_allocation_type: heap_buffers
 commitlog_sync: batch
+commitlog_sync_batch_window: 1.0ms
 commitlog_segment_size: 5mb
 commitlog_directory: build/test/cassandra/commitlog
 cdc_raw_directory: build/test/cassandra/cdc_raw
